added 1024 dense layer

--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +84,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ResNet50"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -218,45 +225,25 @@
      "output_type": "stream",
      "text": [
       "Train on 14478 samples, validate on 2556 samples\n",
-      "Epoch 1/15\n",
-      "14478/14478 [==============================] - 23s 2ms/step - loss: 81.2380 - acc: 0.8123 - val_loss: 81.2016 - val_acc: 0.8991\n",
-      "Epoch 2/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.3930 - acc: 0.8993 - val_loss: 81.3607 - val_acc: 0.9073\n",
-      "Epoch 3/15\n",
-      "14478/14478 [==============================] - 20s 1ms/step - loss: 81.4833 - acc: 0.9059 - val_loss: 81.4507 - val_acc: 0.9096\n",
-      "Epoch 4/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.5629 - acc: 0.9121 - val_loss: 81.5169 - val_acc: 0.9085\n",
-      "Epoch 5/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.6223 - acc: 0.9170 - val_loss: 81.5847 - val_acc: 0.9104\n",
-      "Epoch 6/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.6564 - acc: 0.9201 - val_loss: 81.5816 - val_acc: 0.9104\n",
-      "Epoch 7/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.6512 - acc: 0.9220 - val_loss: 81.5829 - val_acc: 0.9135\n",
-      "Epoch 8/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.6545 - acc: 0.9260 - val_loss: 81.5918 - val_acc: 0.9190\n",
-      "Epoch 9/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.6734 - acc: 0.9274 - val_loss: 81.6279 - val_acc: 0.9151\n",
-      "Epoch 10/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.6950 - acc: 0.9265 - val_loss: 81.6910 - val_acc: 0.9026\n",
-      "Epoch 11/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.7229 - acc: 0.9285 - val_loss: 81.6702 - val_acc: 0.9135\n",
-      "Epoch 12/15\n",
-      "14478/14478 [==============================] - 20s 1ms/step - loss: 81.7317 - acc: 0.9311 - val_loss: 81.6611 - val_acc: 0.9194\n",
-      "Epoch 13/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.7300 - acc: 0.9301 - val_loss: 81.6713 - val_acc: 0.9206\n",
-      "Epoch 14/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.7325 - acc: 0.9336 - val_loss: 81.6953 - val_acc: 0.9131\n",
-      "Epoch 15/15\n",
-      "14478/14478 [==============================] - 19s 1ms/step - loss: 81.7489 - acc: 0.9296 - val_loss: 81.6893 - val_acc: 0.9206\n"
+      "Epoch 1/5\n",
+      "14478/14478 [==============================] - 20s 1ms/step - loss: 0.2761 - acc: 0.9136 - val_loss: 0.1992 - val_acc: 0.9343\n",
+      "Epoch 2/5\n",
+      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.1291 - acc: 0.9575 - val_loss: 0.1991 - val_acc: 0.9315\n",
+      "Epoch 3/5\n",
+      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0842 - acc: 0.9735 - val_loss: 0.1985 - val_acc: 0.9327\n",
+      "Epoch 4/5\n",
+      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0529 - acc: 0.9830 - val_loss: 0.2150 - val_acc: 0.9292\n",
+      "Epoch 5/5\n",
+      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0314 - acc: 0.9914 - val_loss: 0.2275 - val_acc: 0.9300\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2ae9bb78710>"
+       "<keras.callbacks.History at 0x1b347ef65f8>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,13 +256,16 @@
     "\n",
     "model=Sequential()\n",
     "\n",
-    "model.add(Dense(512, input_dim=100352, activation='tanh',kernel_initializer='uniform', activity_regularizer=regularizers.l1(0.01)))\n",
+    "model.add(Dense(1024, input_dim=100352, activation='relu'))\n",
     "keras.layers.core.Dropout(0.5, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(360,input_dim=512,activation='relu'))\n",
+    "model.add(Dense(512,input_dim=1024,activation='relu'))\n",
     "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(256,input_dim=360,activation='relu'))\n",
+    "model.add(Dense(256,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(256,input_dim=256,activation='relu'))\n",
     "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
     "\n",
     "model.add(Dense(128,input_dim=256,activation='sigmoid'))\n",
@@ -288,12 +278,12 @@
     "\n",
     "# fitting the model \n",
     "\n",
-    "model.fit(X_train, Y_train, epochs=15, batch_size=16,validation_data=(X_valid,Y_valid))"
+    "model.fit(X_train, Y_train, epochs=5, batch_size=16,validation_data=(X_valid,Y_valid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +346,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -371,11 +361,11 @@
        "0      5\n",
        "1      0\n",
        "2      4\n",
-       "3      3\n",
+       "3      2\n",
        "4      5"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +433,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>11.jpg</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -459,11 +449,11 @@
        "0      3.jpg      5\n",
        "1      5.jpg      0\n",
        "2      6.jpg      4\n",
-       "3     11.jpg      3\n",
+       "3     11.jpg      2\n",
        "4     14.jpg      5"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,33 +464,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('resnet15_15_5.csv')"
+    "result.to_csv('resnet_t_15_5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
-    "model_name = 'trained_resnet50_model_15.h5'"
+    "model_name = 'trained_resnet50_tanh_model_15.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_model_15.h5 \n"
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_tanh_model_15.h5 \n"
      ]
     }
    ],
@@ -575,6 +565,13 @@
    "source": [
     "test_img=np.array(test_img)\n",
     "test_img=preprocess_input(test_img)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VGG16"
    ]
   },
   {
@@ -924,6 +921,13 @@
     "model_path = os.path.join(save_dir, model_name)\n",
     "model.save(model_path)\n",
     "print('Saved trained model at %s ' % model_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VGG19\n"
    ]
   },
   {
@@ -1356,6 +1360,13 @@
     "model_path = os.path.join(save_dir, model_name)\n",
     "model.save(model_path)\n",
     "print('Saved trained model at %s ' % model_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DenseNet101\n"
    ]
   },
   {
@@ -1802,11 +1813,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# DenseNet201"
+   ]
   },
   {
    "cell_type": "code",
@@ -2621,7 +2632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ResNet101"
+    "# InceptionResNet\n"
    ]
   },
   {
