--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from scipy.misc import imread\n",
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,28 +167,13 @@
     }
    ],
    "source": [
-    "from keras.applications import ResNet50\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Flatten, GlobalAveragePooling2D\n",
-    "from keras.applications.resnet50 import preprocess_input\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "\n",
     "num_classes = 6\n",
-    "\n",
-    "#model = Sequential()\n",
-    "#model.add(ResNet50(include_top=False,pooling='avg',weights='imagenet'))\n",
-    "#model.add(Dense(num_classes,activation='softmax'))\n",
-    "\n",
-    "#model.layers[0].trainable = False\n",
-    "\n",
-    "#model.compile(optimizer='sgd', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "model = ResNet50(weights='imagenet', include_top=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -226,49 +219,44 @@
      "text": [
       "Train on 14478 samples, validate on 2556 samples\n",
       "Epoch 1/5\n",
-      "14478/14478 [==============================] - 20s 1ms/step - loss: 0.2761 - acc: 0.9136 - val_loss: 0.1992 - val_acc: 0.9343\n",
+      "14478/14478 [==============================] - 48s 3ms/step - loss: 0.3133 - acc: 0.8954 - val_loss: 0.2307 - val_acc: 0.9237\n",
       "Epoch 2/5\n",
-      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.1291 - acc: 0.9575 - val_loss: 0.1991 - val_acc: 0.9315\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.1596 - acc: 0.9454 - val_loss: 0.2048 - val_acc: 0.9261\n",
       "Epoch 3/5\n",
-      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0842 - acc: 0.9735 - val_loss: 0.1985 - val_acc: 0.9327\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.1110 - acc: 0.9639 - val_loss: 0.2083 - val_acc: 0.9304\n",
       "Epoch 4/5\n",
-      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0529 - acc: 0.9830 - val_loss: 0.2150 - val_acc: 0.9292\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0736 - acc: 0.9770 - val_loss: 0.2120 - val_acc: 0.9319\n",
       "Epoch 5/5\n",
-      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0314 - acc: 0.9914 - val_loss: 0.2275 - val_acc: 0.9300\n"
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0432 - acc: 0.9882 - val_loss: 0.2153 - val_acc: 0.9304\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1b347ef65f8>"
+       "<keras.callbacks.History at 0x1bb47409ef0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from keras.layers import Dense, Activation\n",
-    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
-    "from keras.optimizers import RMSprop\n",
     "from keras import regularizers\n",
     "\n",
     "model=Sequential()\n",
     "\n",
-    "model.add(Dense(1024, input_dim=100352, activation='relu'))\n",
+    "model.add(Dense(1024, input_dim=100352, activation='relu',kernel_initializer='uniform'))\n",
     "keras.layers.core.Dropout(0.5, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(512,input_dim=1024,activation='relu'))\n",
-    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "#model.add(Dense(512,input_dim=2048,activation='relu'))\n",
+    "#keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(256,input_dim=512,activation='relu'))\n",
-    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
+    "#model.add(Dense(256,input_dim=512,activation='relu'))\n",
+    "#keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(256,input_dim=256,activation='relu'))\n",
-    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
-    "\n",
-    "model.add(Dense(128,input_dim=256,activation='sigmoid'))\n",
+    "model.add(Dense(128,input_dim=128,activation='sigmoid'))\n",
     "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
     "\n",
     "model.add(Dense(units=6))\n",
@@ -278,7 +266,7 @@
     "\n",
     "# fitting the model \n",
     "\n",
-    "model.fit(X_train, Y_train, epochs=5, batch_size=16,validation_data=(X_valid,Y_valid))"
+    "model.fit(X_train, Y_train, epochs=5,batch_size=8, validation_data=(X_valid,Y_valid))"
    ]
   },
   {
@@ -464,33 +452,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.to_csv('resnet_relu_1024dense_15_5.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('resnet_t_15_5.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
-    "model_name = 'trained_resnet50_tanh_model_15.h5'"
+    "model_name = 'trained_resnet50_relu_1024dense_model_15.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_tanh_model_15.h5 \n"
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_relu_1024dense_model_15.h5 \n"
      ]
     }
    ],
