removed dense 256 layer

--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -218,27 +218,23 @@
      "output_type": "stream",
      "text": [
       "Train on 14478 samples, validate on 2556 samples\n",
-      "Epoch 1/5\n",
-      "14478/14478 [==============================] - 48s 3ms/step - loss: 0.3133 - acc: 0.8954 - val_loss: 0.2307 - val_acc: 0.9237\n",
-      "Epoch 2/5\n",
-      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.1596 - acc: 0.9454 - val_loss: 0.2048 - val_acc: 0.9261\n",
-      "Epoch 3/5\n",
-      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.1110 - acc: 0.9639 - val_loss: 0.2083 - val_acc: 0.9304\n",
-      "Epoch 4/5\n",
-      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0736 - acc: 0.9770 - val_loss: 0.2120 - val_acc: 0.9319\n",
-      "Epoch 5/5\n",
-      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0432 - acc: 0.9882 - val_loss: 0.2153 - val_acc: 0.9304\n"
+      "Epoch 1/8\n",
+      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.3586 - acc: 0.8879 - val_loss: 0.2277 - val_acc: 0.9206\n",
+      "Epoch 2/8\n",
+      "14478/14478 [==============================] - 26s 2ms/step - loss: 0.1686 - acc: 0.9432 - val_loss: 0.2004 - val_acc: 0.9288\n",
+      "Epoch 3/8\n",
+      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.1136 - acc: 0.9644 - val_loss: 0.2017 - val_acc: 0.9288\n",
+      "Epoch 4/8\n",
+      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0754 - acc: 0.9785 - val_loss: 0.2003 - val_acc: 0.9323\n",
+      "Epoch 5/8\n",
+      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0483 - acc: 0.9884 - val_loss: 0.2061 - val_acc: 0.9335\n",
+      "Epoch 6/8\n",
+      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0327 - acc: 0.9925 - val_loss: 0.2191 - val_acc: 0.9288\n",
+      "Epoch 7/8\n",
+      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0236 - acc: 0.9950 - val_loss: 0.2261 - val_acc: 0.9288\n",
+      "Epoch 8/8\n",
+      " 8048/14478 [===============>..............] - ETA: 11s - loss: 0.0176 - acc: 0.9968"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1bb47409ef0>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -248,16 +244,16 @@
     "model=Sequential()\n",
     "\n",
     "model.add(Dense(1024, input_dim=100352, activation='relu',kernel_initializer='uniform'))\n",
-    "keras.layers.core.Dropout(0.5, noise_shape=None, seed=None)\n",
+    "keras.layers.core.Dropout(0.4, noise_shape=None, seed=None)\n",
     "\n",
-    "#model.add(Dense(512,input_dim=2048,activation='relu'))\n",
-    "#keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "model.add(Dense(512,input_dim=2048,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
     "\n",
     "#model.add(Dense(256,input_dim=512,activation='relu'))\n",
     "#keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
     "\n",
     "model.add(Dense(128,input_dim=128,activation='sigmoid'))\n",
-    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "keras.layers.core.Dropout(0.4, noise_shape=None, seed=None)\n",
     "\n",
     "model.add(Dense(units=6))\n",
     "model.add(Activation('softmax'))\n",
@@ -266,12 +262,12 @@
     "\n",
     "# fitting the model \n",
     "\n",
-    "model.fit(X_train, Y_train, epochs=5,batch_size=8, validation_data=(X_valid,Y_valid))"
+    "model.fit(X_train, Y_train, epochs=8,batch_size=16, validation_data=(X_valid,Y_valid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +349,7 @@
        "4      5"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +437,7 @@
        "4     14.jpg      5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,33 +448,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('resnet_relu_1024dense_15_5.csv')"
+    "result.to_csv('resnet_relu_1024dense_512removed_15_5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
-    "model_name = 'trained_resnet50_relu_1024dense_model_15.h5'"
+    "model_name = 'trained_resnet50_relu_1024dense_512removed_model_15.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_relu_1024dense_model_15.h5 \n"
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_relu_1024dense_512removed_model_15.h5 \n"
      ]
     }
    ],
