added 2 128 dense layers

--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -218,23 +218,27 @@
      "output_type": "stream",
      "text": [
       "Train on 14478 samples, validate on 2556 samples\n",
-      "Epoch 1/8\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.3586 - acc: 0.8879 - val_loss: 0.2277 - val_acc: 0.9206\n",
-      "Epoch 2/8\n",
-      "14478/14478 [==============================] - 26s 2ms/step - loss: 0.1686 - acc: 0.9432 - val_loss: 0.2004 - val_acc: 0.9288\n",
-      "Epoch 3/8\n",
-      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.1136 - acc: 0.9644 - val_loss: 0.2017 - val_acc: 0.9288\n",
-      "Epoch 4/8\n",
-      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0754 - acc: 0.9785 - val_loss: 0.2003 - val_acc: 0.9323\n",
-      "Epoch 5/8\n",
-      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0483 - acc: 0.9884 - val_loss: 0.2061 - val_acc: 0.9335\n",
-      "Epoch 6/8\n",
-      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0327 - acc: 0.9925 - val_loss: 0.2191 - val_acc: 0.9288\n",
-      "Epoch 7/8\n",
-      "14478/14478 [==============================] - 27s 2ms/step - loss: 0.0236 - acc: 0.9950 - val_loss: 0.2261 - val_acc: 0.9288\n",
-      "Epoch 8/8\n",
-      " 8048/14478 [===============>..............] - ETA: 11s - loss: 0.0176 - acc: 0.9968"
+      "Epoch 1/5\n",
+      "14478/14478 [==============================] - 46s 3ms/step - loss: 0.3124 - acc: 0.8973 - val_loss: 0.2342 - val_acc: 0.9139\n",
+      "Epoch 2/5\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.1472 - acc: 0.9508 - val_loss: 0.2086 - val_acc: 0.9241\n",
+      "Epoch 3/5\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0916 - acc: 0.9709 - val_loss: 0.2078 - val_acc: 0.9225\n",
+      "Epoch 4/5\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0534 - acc: 0.9848 - val_loss: 0.2254 - val_acc: 0.9261\n",
+      "Epoch 5/5\n",
+      "14478/14478 [==============================] - 43s 3ms/step - loss: 0.0295 - acc: 0.9930 - val_loss: 0.2388 - val_acc: 0.9221\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x134c8281a90>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -244,16 +248,16 @@
     "model=Sequential()\n",
     "\n",
     "model.add(Dense(1024, input_dim=100352, activation='relu',kernel_initializer='uniform'))\n",
-    "keras.layers.core.Dropout(0.4, noise_shape=None, seed=None)\n",
+    "keras.layers.core.Dropout(0.6, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(512,input_dim=2048,activation='relu'))\n",
-    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
-    "\n",
-    "#model.add(Dense(256,input_dim=512,activation='relu'))\n",
+    "#model.add(Dense(512,input_dim=2048,activation='relu'))\n",
     "#keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
     "\n",
+    "model.add(Dense(128,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
+    "\n",
     "model.add(Dense(128,input_dim=128,activation='sigmoid'))\n",
-    "keras.layers.core.Dropout(0.4, noise_shape=None, seed=None)\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
     "\n",
     "model.add(Dense(units=6))\n",
     "model.add(Activation('softmax'))\n",
@@ -262,12 +266,12 @@
     "\n",
     "# fitting the model \n",
     "\n",
-    "model.fit(X_train, Y_train, epochs=8,batch_size=16, validation_data=(X_valid,Y_valid))"
+    "model.fit(X_train, Y_train, epochs=5,batch_size=8, validation_data=(X_valid,Y_valid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +334,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -345,11 +349,11 @@
        "0      5\n",
        "1      0\n",
        "2      4\n",
-       "3      2\n",
+       "3      4\n",
        "4      5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +421,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>11.jpg</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -433,11 +437,11 @@
        "0      3.jpg      5\n",
        "1      5.jpg      0\n",
        "2      6.jpg      4\n",
-       "3     11.jpg      2\n",
+       "3     11.jpg      4\n",
        "4     14.jpg      5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,33 +452,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('resnet_relu_1024dense_512removed_15_5.csv')"
+    "result.to_csv('resnet_relu_1024dense_2into128_15_5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
-    "model_name = 'trained_resnet50_relu_1024dense_512removed_model_15.h5'"
+    "model_name = 'trained_resnet50_relu_1024dense_2into128_model_15.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_relu_1024dense_512removed_model_15.h5 \n"
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_relu_1024dense_2into128_model_15.h5 \n"
      ]
     }
    ],
